# equation_solver

./: .gitignore  CMakeLists.txt  Makefile  README.md
code/: main.cpp
code/Core/include/: core.h  validate.h
code/Core/src/: core.cpp  get_set.cpp  solve.cpp  validate.cpp
code/gui/include/: component.h  static_assets.h  window.h
code/gui/include/components/: button.h  graph_box.h  label.h  text_box.h
code/gui/src/: component.cpp  handle_core.cpp  window.cpp
code/gui/src/components/: button.cpp  graph_box.cpp  label.cpp  text_box.cpp
code/include/: app.h  core.h  input.h  testing.h
code/src/: app.cpp  core.cpp  input.cpp  testing.cpp
